implmentation of asp-page-handler buttons

--- a/CSRazorSolution/WebApp/Pages/Privacy.cshtml
+++ b/CSRazorSolution/WebApp/Pages/Privacy.cshtml
@@ -6,3 +6,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+<h3>Acknowledgements</h3>
+
+<p>Image source is: wherever the url addres is </p>
