--- a/CSRazorSolution/WebApp/Pages/Samples/PartialFilterSearch.cshtml
+++ b/CSRazorSolution/WebApp/Pages/Samples/PartialFilterSearch.cshtml
@@ -14,32 +14,58 @@
             placeholder="enter your description"/>
     </label>
     <br/>
-    <table>
-        <thead>
-            @*used for column titles*@
-            <tr>
-                <th>Territory ID</th>
-                <th>Name</th>
-                <th>Region ID</th>
-            </tr>
-        </thead>
-        <tbody>
-            @*used for the table details
-              the number of rows are unsually unknown for a db query
-            *@
-            @foreach(var item in Model.TerritoryInfo)
-            {
-                <tr>
-                    <td>@item.TerritoryID</td>
-                    <td>@item.TerritoryDescription</td>
-                    <td>@item.RegionID</td>
-                </tr>
-            }
-        </tbody>
-        <tfoot>
-            @*used for summay table information eg totals*@
-        </tfoot>
-    </table>
+    @*restrict the display of the table to when there is data to view*@
+    @if (Model.TerritoryInfo != null)
+    {
+        if (Model.TerritoryInfo.Count == 0)
+        {
+            <p style="color:blueviolet; font-weight:bold; font-size:large;">
+                There are no territories matching your search request.
+            </p>
+        }
+        else
+        {
+            <table>
+                <thead>
+                    @*used for column titles*@
+                    <tr>
+                        <th>Territory</th>
+                        <th>Name</th>
+                        <th>Region</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @*used for the table details
+                        the number of rows are unsually unknown for a db query
+                    *@
+                    @foreach (var item in Model.TerritoryInfo)
+                    {
+                        <tr>
+                            <td>@item.TerritoryID</td>
+                            <td>@item.TerritoryDescription</td>
+                            <td><select disabled="true">
+                                    @foreach (var region in Model.RegionList)
+                                    {
+                                        if (region.RegionID == item.RegionID)
+                                        {
+                                            <option value="@region.RegionID" selected>@region.RegionDescription</option>
+                                        }
+                                        else
+                                        {
+                                            <option value="@region.RegionID">@region.RegionDescription</option>
+                                        }
+                                    }
+                                </select> 
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+                <tfoot>
+                 @*used for summay table information eg totals*@
+                </tfoot>
+            </table>
+        }
+    }
     <button type="submit" asp-page-handler="Fetch">Fetch Territories</button>&nbsp;&nbsp;
     <button type="submit" asp-page-handler="Clear" formnovalidate>Clear</button>
 
