reverse engineer entities

--- a/CSRazorSolution/WebApp/Pages/Index.cshtml
+++ b/CSRazorSolution/WebApp/Pages/Index.cshtml
@@ -28,3 +28,5 @@
             was released on @Model.buildVersionInfo.ReleaseDate.ToShortDateString()
         </p>
     }
+
+    <p>Picker value is @Model.picker</p>
