Code the backend service methods for Product CRUD

--- a/CSRazorSolution/WebApp/Pages/Samples/PartialFilterSearch.cshtml
+++ b/CSRazorSolution/WebApp/Pages/Samples/PartialFilterSearch.cshtml
@@ -126,6 +126,7 @@
         }
     }
     <button type="submit" asp-page-handler="Fetch">Fetch Territories</button>&nbsp;&nbsp;
-    <button type="submit" asp-page-handler="Clear" formnovalidate>Clear</button>
+    <button type="submit" asp-page-handler="Clear" formnovalidate>Clear</button>&nbsp;&nbsp;
+    <button type="submit" asp-page-handler="New" formnovalidate>New Territory</button>
 
 </form>
