Add various form controls on web page Controls

--- a/CSRazorSolution/WebApp/Pages/Shared/_Layout.cshtml
+++ b/CSRazorSolution/WebApp/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,8 @@
                         <li><a asp-area="" asp-page="/Samples/BasicDataManagement">Basics</a></li>
                         <li><a asp-area="" asp-page="/Samples/RegionQueryOne">Single Row Query</a></li>
                         <li><a asp-area="" asp-page="/Samples/PartialFilterSearch">Table Query</a></li>
+                        <li><a asp-area="" asp-page="/Samples/Controls">Controls</a></li>
+
                     </ul>
                 </li>
                 <li>
