--- a/CSRazorSolution/WebApp/Pages/Samples/CategoryProducts.cshtml
+++ b/CSRazorSolution/WebApp/Pages/Samples/CategoryProducts.cshtml
@@ -89,9 +89,8 @@
                     {
                         <tr>
                             <td>
-                                <a href="/Samples/ProductCRUD/@item.ProductID">
-                                    @item.ProductName
-                                </a>
+                                <a href="/Samples/CRUDProduct/@item.ProductID">
+                                    @item.ProductName</a>
                             </td>
                             <td><select disabled="true">
                                     @foreach (var supplier in Model.SupplierList)
